--- a/style.css
+++ b/style.css
@@ -5,3 +5,197 @@
 .attribution a {
     color: hsl(228, 45%, 44%);
 }
+
+/* font setup */
+@font-face {
+    font-family: "HankenGrotesk";
+    font-display: swap;
+    font-weight: 100 900;
+    src: url("assets/fonts/HankenGrotesk-VariableFont_wght.ttf")
+        format("truetype");
+}
+
+/* custom properties */
+:root {
+    --light-red: hsl(0, 100%, 67%);
+    --orangey-yellow: hsl(39, 100%, 56%);
+    --green-teal: hsl(166, 100%, 37%);
+    --Cobalt-blue: hsl(234, 85%, 45%);
+
+    --white: hsl(0, 0%, 100%);
+    --pale-blue: hsl(221, 100%, 96%);
+    --light-lavender: hsl(241, 100%, 89%);
+    --dark-gray-blue: hsl(224, 30%, 27%);
+
+    --light-slate-blue-background: hsl(252, 100%, 67%);
+    --light-royal-blue-background: hsl(241, 81%, 54%);
+
+    --Violet-blue-circle: hsla(256, 72%, 46%, 1);
+    --Persian-blue-circle: hsla(241, 72%, 46%, 0);
+
+    --gradient-primary: linear-gradient(
+        to bottom,
+        var(--light-slate-blue-background),
+        var(--light-royal-blue-background)
+    );
+
+    --gradient-secondary: linear-gradient(
+        var(--Violet-blue-circle),
+        var(--Persian-blue-circle)
+    );
+
+    --font-family-default: "HankenGrotesk";
+    --fw-regular: 500;
+    --fw-bold: 700;
+    --fw-black: 800;
+}
+
+/* reset */
+
+* {
+    margin: 0;
+    padding: 0;
+    font: inherit;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+img,
+svg {
+    display: block;
+    width: 100%;
+}
+
+/* general styling */
+
+body {
+    font-family: var(--font-family-default);
+    font-size: var(--fw-regular);
+    background-color: var(--pale-blue);
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+}
+
+/* result section */
+
+.result-summary {
+    max-width: 600px;
+    border-radius: 32px;
+    background-color: var(--white);
+    box-shadow: rgba(0, 0, 0, 0.24), 0px 3px 8px;
+}
+
+.result {
+    background-image: var(--gradient-primary);
+    border-radius: 32px;
+    text-align: center;
+    padding: 24px 32px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.result-title {
+    font-weight: var(--fw-regular);
+    color: var(--light-lavender);
+    margin-bottom: 15px;
+}
+
+.result-score {
+    color: var(--light-lavender);
+    font-weight: var(--fw-regular);
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background-image: var(--gradient-secondary);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.result-score span {
+    color: var(--white);
+    font-weight: var(--fw-bold);
+    font-size: 50px;
+}
+
+.result-rank {
+    font-weight: var(--fw-regular);
+    font-size: 24px;
+    color: var(--white);
+    margin: 15px 0;
+}
+
+.result-info {
+    color: var(--light-lavender);
+    width: 220px;
+}
+
+/* summary section */
+
+.summary {
+    padding: 24px 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.summary-title {
+    font-weight: var(--fw-black);
+}
+
+.summary-rows {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.summary-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+    padding: 16px 8px;
+}
+
+.flex-group {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 8px;
+}
+
+/* utilities */
+
+.btn {
+    background-color: var(--dark-gray-blue);
+    color: var(--white);
+    padding: 8px 32px;
+    border: none;
+    border-radius: 32px;
+    cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus-visible {
+    background-image: var(--gradient-primary);
+}
+
+/* media queries */
+
+@media (min-width: 640px) {
+    .result-summary {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        overflow: hidden;
+    }
+}
