--- a/style.css
+++ b/style.css
@@ -248,4 +248,8 @@ body {
         box-shadow: rgba(0, 0, 0, 0.24), 0px 3px 8px;
         border-radius: 32px;
     }
+
+    .result {
+        border-radius: 32px;
+    }
 }
